# VideoSdk

VideoSDK/: local.properties  settings.gradle  srd.jks
VideoSDK/app/: build.gradle
VideoSDK/app/src/androidTest/java/com/hyq/hm/videosdk/: ExampleInstrumentedTest.java
VideoSDK/app/src/main/: AndroidManifest.xml  Readme.md
VideoSDK/app/src/main/res/drawable/: diliver.xml  shape.xml
VideoSDK/app/src/main/res/layout/: activity_camera.xml  activity_first.xml  activity_main.xml  activity_wdse.xml  coordinate.xml
VideoSDK/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
VideoSDK/app/src/test/java/com/hyq/hm/videosdk/: ExampleUnitTest.java
VideoSDK/facecal/: build.gradle
VideoSDK/facecal/src/main/: AndroidManifest.xml
VideoSDK/facecal/src/main/java/zeusees/tracking/: FaceTracking.java
VideoSDK/facecal/src/main/res/values/: strings.xml
VideoSDK/gradle/wrapper/: gradle-wrapper.properties
VideoSDK/video_filter/: CMakeLists.txt  build.gradle
VideoSDK/video_filter/src/androidTest/java/com/hyq/videoFilter/: ExampleInstrumentedTest.java
VideoSDK/video_filter/src/main/: AndroidManifest.xml
VideoSDK/video_filter/src/main/cpp/: video_filter.cpp
VideoSDK/video_filter/src/main/cpp/filter/: hyq_sdk_glsl_program.c  hyq_sdk_head.h  hyq_sdk_mesh.c  hyq_sdk_model.c  hyq_sdk_texture.c
VideoSDK/video_filter/src/main/java/com/hyq/videoFilter/: EGLUtils.java  VideoFilter.java
VideoSDK/video_filter/src/main/res/values/: strings.xml
VideoSDK/video_filter/src/test/java/com/hyq/videoFilter/: ExampleUnitTest.java
(+37 files in other folders)
